[gd_scene load_steps=4 format=3 uid="uid://gkqlidgxuyov"]

[ext_resource type="Script" path="res://Menus/game_over_screen.gd" id="1_5a025"]
[ext_resource type="Texture2D" uid="uid://nc0rimlyd6kj" path="res://Menus/GameOver.png" id="2_kdsky"]
[ext_resource type="AudioStream" uid="uid://d02qv0mutiep3" path="res://Audio/SFX/GameOver.wav" id="3_jvcch"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5a025")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -50.5
offset_right = 81.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "JOGAR NOVAMENTE"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU PRINCIPAL"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../NewGameButton")
text = "SAIR DO JOGO"

[node name="GameOverSplash" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -468.0
offset_top = -288.0
offset_right = 2507.0
offset_bottom = 1699.0
grow_horizontal = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_kdsky")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jvcch")
autoplay = true

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
